# norlab_controllers_ros

./: .gitmodules
norlab_controllers_msgs/: CMakeLists.txt  (+1 more)
norlab_controllers_wrapper/: CMakeLists.txt
norlab_controllers_wrapper/launch/: controller.launch.py  husky_pwrtrn_mpc_launch.xml  husky_slip_blr_pwrtrn_mpc_launch.xml  test_warthog_pwrtrain_mpc.xml  test_warthog_slip_blr_mpc_launch.xml  warthog_slip_blr_pwrtrn_mpc_launch.xml
norlab_controllers_wrapper/params/husky/test/: pwrtrn-diff-drive-mpc.yaml  slip-blr-pwrtrn-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/warthog_wheels/grass/: ideal-diff-drive-mpc.yaml  pwrtrn-diff-drive-mpc.yaml  slip-blr-pwrtrn-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/warthog_wheels/gravel/: pwrtrn-diff-drive-mpc.yaml  slip-blr-pwrtrn-diff-drive-mpc.yaml
norlab_controllers_wrapper/params/warthog_wheels/gravel/trained_params/acceleration/blr/: b_param_n_x.npy  b_param_n_yaw.npy  covariance_x.npy  covariance_yaw.npy  weights_x.npy  weights_yaw.npy
norlab_controllers_wrapper/params/warthog_wheels/gravel/trained_params/powertrain/: powertrain_training_left.npy  powertrain_training_right.npy
norlab_controllers_wrapper/params/warthog_wheels/gravel/trained_params/slip/blr/steady-state/: a_param_n_x.npy  b_param_n_x.npy  b_param_n_y.npy  b_param_n_yaw.npy  covariance_x.npy  covariance_y.npy  covariance_yaw.npy  weights_x.npy  weights_y.npy  weights_yaw.npy
norlab_controllers_wrapper/params/warthog_wheels/ice/: pwrtrn-diff-drive-mpc.yaml
norlab_controllers_wrapper/scripts/: controller_node.py  test.py
(+1 files in other folders)
